--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,27 +1,25 @@
 name: example
 description: "screenshot_callback_pro example"
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.4 <4.0.0'
+  sdk: ">=3.4.4 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  cupertino_icons: ^1.0.6
 
   screenshot_callback_pro:
     path: ../
 
 flutter:
-
   uses-material-design: true
